Updated to include all eight cards and pronouns with new members

--- a/team.html
+++ b/team.html
@@ -135,6 +135,7 @@
             <div class="container">
                 <div class="col-lg-12">
                     <div class="row row-grid">
+                    <!--
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
@@ -154,16 +155,30 @@
                                 </div>
                             </div>
                         </div>
+                        -->
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/connor.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
+                                    <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Connor Mears</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Linden, MI</div>
+                                        <h3 class="text-primary">Mikayla Norton</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Applied Engineering Sciences</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
+                                    </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0 h-100">
+                                <div class="card-body">
+                                    <img src="assets/img/team/akhil.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Akhil Tatineni</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -178,6 +193,7 @@
                                     <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Mikayla Norton</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
@@ -190,19 +206,18 @@
                                 </div>
                             </div>
                         </div>
-                        <!--
 			<div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/henry.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Henry Xu's Photo">
+                                    <img src="assets/img/team/katy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Henry Xu's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Henry Xu</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Novi, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2022</div>
+                                        <h3 class="text-primary">Katy Foss</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Tecumseh, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Media Chair</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Environmental Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
                                     </div>
-				    -->
                                     <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
                                     </div> -->
