--- a/team.html
+++ b/team.html
@@ -168,6 +168,9 @@
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Applied Engineering Sciences</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
