--- a/team.html
+++ b/team.html
@@ -178,7 +178,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/akhil.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
+                                    <img src="assets/img/team/akhil.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Akhil Tatineni</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
@@ -213,10 +213,10 @@
                                 </div>
                             </div>
                         </div>
-			<div class="col-lg-4 mb-4">
+			            <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/katy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Henry Xu's Photo">
+                                    <img src="assets/img/team/katy.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Henry Xu's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Katy Foss</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
