--- a/team.html
+++ b/team.html
@@ -272,7 +272,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/akhil.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Akhil Tatineni's Photo">
+                                    <img src="team/akhil.PNG" alt="Akhil Tatineni" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Akhil Tatineni's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Akhil Tatineni</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
