--- a/team.html
+++ b/team.html
@@ -197,14 +197,71 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
+                                    <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Mikayla Norton</h3>
+                                        <h3 class="text-primary">Tommy Erickson</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Grosse Ile, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2023</div>
+                                    </div>
+
+                                    <!-- <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0 h-100">
+                                <div class="card-body">
+                                    <img src="assets/img/team/grant.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Grant Wills's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Grant Wills</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Finance</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>April 2023</div>
+                                    </div>
+
+                                    <!-- <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0 h-100">
+                                <div class="card-body">
+                                    <img src="assets/img/team/aliza.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Aliza Opolka's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Aliza Opolka</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering Sciences</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Fowlerville, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
+                                    </div>
+
+                                    <!-- <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0 h-100">
+                                <div class="card-body">
+                                    <img src="assets/img/team/ethan.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Ethan Rylko</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Rochester Hills, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science and Applied Engineering Sciences</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -243,60 +300,6 @@
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
                                         <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2023</div>
-                                    </div>
-
-                                    <!-- <div class="border-top">
-                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0 h-100">
-                                <div class="card-body">
-                                    <img src="assets/img/team/grant.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Grant Wills's Photo">
-                                    <div class="text-center mt-3">
-                                        <h3 class="text-primary">Grant Wills</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Finance</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>April 2023</div>
-                                    </div>
-
-                                    <!-- <div class="border-top">
-                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0 h-100">
-                                <div class="card-body">
-                                    <img src="team/akhill.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Akhil Tatineni's Photo">
-                                    <div class="text-center mt-3">
-                                        <h3 class="text-primary">Akhil Tatineni</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
-                                    </div>
-
-                                    <!-- <div class="border-top">
-                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0 h-100">
-                                <div class="card-body">
-                                    <img src="assets/img/team/aliza.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Aliza Opolka's Photo">
-                                    <div class="text-center mt-3">
-                                        <h3 class="text-primary">Aliza Opolka</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Fowlerville, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
                                     <!-- <div class="border-top">
