--- a/team.html
+++ b/team.html
@@ -292,14 +292,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/tommy.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
+                                    <img src="assets/img/team/josh.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Tommy Erickson</h3>
+                                        <h3 class="text-primary">Joshua VanBynen</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Grosse Ile, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2023</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Pinckney, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Chemical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
                                     </div>
 
                                     <!-- <div class="border-top">
