--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -128,7 +128,7 @@
 
                                 <div class="btn-toolbar mt-5" role="group">
                                     <div class="btn-wrapper">
-                                        <a href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
+                                        <a href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
                                             <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                             <span class="btn-inner--text">Apply Now</span>
                                         </a>
@@ -163,7 +163,7 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
-                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank">Sign Up Here</a>
+                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank">Sign Up Here</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -230,7 +230,7 @@
                             <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
                                 <p class="description2">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. The program costs will be at max $200 but likely will be less, as it includes early move in costs, all meals, and a t-shirt at the end of the program. Payment information will be sent out to accepted participants.</p>
                                 <div class="btn-wrapper">
-                                    <a href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
+                                    <a href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                         <span class="btn-inner--text">Apply Now</span>
                                     </a>
