--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -131,7 +131,7 @@
 
                                 <div class="btn-toolbar mt-5" role="group">
                                     <div class="btn-wrapper">
-                                        <a href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
+                                        <a href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
                                             <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                             <span class="btn-inner--text">Apply Now</span>
                                         </a>
@@ -166,7 +166,7 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
-                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank">Sign Up Here</a>
+                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank">Sign Up Here</a>
                                                 </div>
                                             </div>
                                         </div>
