--- a/about.html
+++ b/about.html
@@ -119,10 +119,10 @@
                                 <h1 class="display-3  text-white">About the Program
                                 </h1>
                                 <!--
-                                <p class="lead text-white">Applications for the 2021 program are not yet open.</p>
+                                <p class="lead text-white">Applications for the 2022 program are not yet open.</p>
                                 <p class="lead text-white">The applications will open in the Spring.</p>
                                 -->
-                                <p class="lead text-white">Applications for the 2021 program are now open.</p>
+                                <p class="lead text-white">Applications for the 2022 program are now open.</p>
                                 <p class="lead text-white">Updated program information due to new regulations can be found by clicking the button below.</p>
 
 
@@ -155,8 +155,8 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <p class="pl-1">Hello future Spartan!</p>
-                                                    <p>This year we are hoping to run the program in person while being socially distant and abiding by all health and safety protocols laid out by Michigan State University, Ingham County, and the state of Michigan. We will be giving out refunds in case we are unable to hold it in person and we will try to set up a few virtual events before the start of the semester.</p>
-                                                    <p>Applications are due by <b>July 19th, 2021</b>, however applications are evaluated as they come in, so apply as soon as you can! The program costs will be at max $200 but likely will be less, as it includes early move in costs, all meals, and a t-shirt at the end of the program. All accepted participants will be contacted via email by <b>July 26th</b>. Move-in for the students will be <b>August 25th</b> with the program running to the <b>28th</b>. If you are interested in attending, please fill out the Google Form by clicking on the button below.</p>
+                                                    <p>This year we are hoping to run the program in person while being socially distant and abiding by all health and safety protocols laid out by Michigan State University, Ingham County, and the state of Michigan. </p>
+                                                    <p>Applications are due by <b>July 11th, 2022</b>, however applications are evaluated as they come in, so apply as soon as you can! All participants choosing to take part will be charged a program fee of around $200. This is subject to change, and will be refunded if the program is unable to occur due to future COVID-19 restrictions/guidelines. All accepted participants will be contacted via email by <b>July 25th</b>. Move-in for the students will be <b>August 24th</b> with the program running to the <b>27th</b>. If you are interested in attending, please fill out the Google Form by clicking on the button below.</p>
                                                     <p>If you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
                                                     <p>We hope to see you soon!</p>
                                                     <p class="mb-0 pl-2">- Leadership Advantage Executive Board</p>
@@ -304,7 +304,7 @@
             <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; 2021
+                        &copy; 2022
                         Leadership Advantage.
                     </div>
                 </div>
