Update From Junior to Senior/ Test Edit

--- a/team.html
+++ b/team.html
@@ -203,7 +203,7 @@
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Grosse Ile, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2023</div>
                                     </div>
 
