Changed from Junior to Senior/ Editing Test

--- a/team.html
+++ b/team.html
@@ -222,7 +222,7 @@
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Finance</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Finance</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>April 2023</div>
                                     </div>
 
@@ -241,7 +241,7 @@
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Fowlerville, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
                                     </div>
 
