new addtition to main - added Alumni page and added the Alumni shortcut to all other pages

--- a/about.html
+++ b/about.html
@@ -72,6 +72,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a href="alumni.html" class="nav-link" id="nav-team">
+                                <i class="fa fa-users d-lg-none"></i>
+                                <span class="nav-link-inner--text">Alumni</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="https://www.instagram.com/leadershipadvantagemsu/" target="_blank" class="nav-link">
                                 <i class="fa fa-instagram fa-lg d-lg mr-0"></i>
                                 <span class="nav-link-inner--text">Instagram</span>
