Photo Error Solution Attempt 1

--- a/team.html
+++ b/team.html
@@ -159,7 +159,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/katyf.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Katy Foss's Photo">
+                                    <img src="assets/img/team/katy.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Katy Foss's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Katy Foss</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
@@ -254,7 +254,7 @@
 			            <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/caley.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
+                                    <img src="assets/img/team/caley.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Caley Burnock</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
@@ -273,7 +273,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/jack.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
+                                    <img src="assets/img/team/jack.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Jack Sleeman</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
@@ -311,7 +311,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/garrett.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Garrett Gambaro's Photo">
+                                    <img src="assets/img/team/garrett.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Garrett Gambaro's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Garrett Gambaro</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
