--- a/team.html
+++ b/team.html
@@ -159,7 +159,7 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/katy.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Katy Foss's Photo">
+                                    <img src="assets/img/team/katy2.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Katy Foss's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Katy Foss</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
