repurposed covid button to an application information button

--- a/about.html
+++ b/about.html
@@ -135,12 +135,13 @@
                                     </div>
 
 
-                                    <!-- COVID Update -->
+                                     <!-- COVID Update (REPURPOSED) -->
+                                    <!--This button was used in 2020 as a covid update, but now it is used as an application-specific information button -->
                                     <!-- Button trigger modal -->
                                     <div class="btn-wrapper">
                                         <button type="button" class="btn btn-danger btn-icon mb-3 mb-sm-0" data-toggle="modal" data-target="#covidModalCenter">
                                             <span class="btn-inner--icon"><i class="fa fa-exclamation-triangle"></i></span>
-                                            <span class="btn-inner--text">COVID-19 Update</span>
+                                            <span class="btn-inner--text">Application Information</span>
                                         </button>
                                     </div>
                                     <!-- Modal -->
@@ -155,8 +156,12 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <p class="pl-1">Hello future Spartan!</p>
-                                                    <p>This year we are hoping to run the program in person while being socially distant and abiding by all health and safety protocols laid out by Michigan State University, Ingham County, and the state of Michigan. </p>
-                                                    <p>Applications are due by <b>July 11th, 2023</b>, however applications are evaluated as they come in, so apply as soon as you can! All participants choosing to take part will be charged a program fee of around $200. This is subject to change, and will be refunded if the program is unable to occur due to future COVID-19 restrictions/guidelines. All accepted participants will be contacted via email by <b>July 25th</b>. Move-in for the students will be <b>August 24th</b> with the program running to the <b>27th</b>. If you are interested in attending, please fill out the Google Form by clicking on the button below.</p>
+                                                    <!-- <p>This year we are hoping to run the program in person while being socially distant and abiding by all health and safety protocols laid out by Michigan State University, Ingham County, and the state of Michigan. </p>-->
+                                                    <p>Applications are due by <b>July 11th, 2023</b>, however applications are evaluated as they come in, so apply as soon 
+                                                    as you can! All participants choosing to take part will be charged a program fee of around $200. This is subject to change, 
+                                                    and will be refunded if the program is unable to occur due to future COVID-19 restrictions/guidelines. All accepted participants
+                                                    will be contacted via email by <b>July 25th</b>. Move-in for the students will be <b>August 24th</b> with the program running to 
+                                                    the <b>27th</b>. If you are interested in attending, please fill out the Google Form by clicking on the button below.</p>
                                                     <p>If you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
                                                     <p>We hope to see you soon!</p>
                                                     <p class="mb-0 pl-2">- Leadership Advantage Executive Board</p>
