--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/1uHjTPqs2CVkpFLg9" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -131,7 +131,7 @@
 
                                 <div class="btn-toolbar mt-5" role="group">
                                     <div class="btn-wrapper">
-                                        <a href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
+                                        <a href="https://forms.gle/1uHjTPqs2CVkpFLg9" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0 mr-4">
                                             <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                             <span class="btn-inner--text">Apply Now</span>
                                         </a>
@@ -160,10 +160,11 @@
                                                 <div class="modal-body">
                                                     <p class="pl-1">Hello future Spartan!</p>
                                                     <!-- <p>This year we are hoping to run the program in person while being socially distant and abiding by all health and safety protocols laid out by Michigan State University, Ingham County, and the state of Michigan. </p> -->
-                                                    <p>Applications are due by <b>July 11th, 2023</b>, however applications are evaluated as they come in, so apply as soon as you can! 
-                                                    All participants choosing to take part will be charged a program fee of around $200. This is subject to change, and will be refunded 
-                                                    if the program is unable to occur due to future COVID-19 restrictions/guidelines. All accepted participants will be contacted via email 
-                                                    by <b>July 25th</b>. Move-in for the students will be <b>August 24th</b> with the program running to the <b>27th</b>. If you are interested 
+                                                    <p>Applications are due by <b>Monday, July 14th at 11:59 pm EST</b>, however the earlier your application is submitted, the earlier you will be considered for the program.
+                                                    All participants choosing to take part will be charged a program fee of around $200.
+                                                    <!--This is subject to change, and will be refunded if the program is unable to occur due to future COVID-19 restrictions/guidelines. -->
+                                                    All accepted participants will be contacted via email by <b>July 16th</b>. There will be an acceptance form that must be completed by <b>July 18th<b> to secure early move in. If accepted, early move-in for participants will be <b>August 20th</b> 
+                                                    with the program concluding on <b>August 23rd</b>. If you are interested 
                                                     in attending, please fill out the Google Form by clicking on the button below.</p>
                                                     <p>If you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
                                                     <p>We hope to see you soon!</p>
@@ -171,7 +172,7 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
-                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/mDMrqJqQVamScgS89" target="_blank">Sign Up Here</a>
+                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/1uHjTPqs2CVkpFLg9" target="_blank">Sign Up Here</a>
                                                 </div>
                                             </div>
                                         </div>
