Deadline setback Update

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                                                 <div class="modal-body">
                                                     <p class="pl-1">Hello future Spartan!</p>
                                                     <!-- <p>This year we are hoping to run the program in person while being socially distant and abiding by all health and safety protocols laid out by Michigan State University, Ingham County, and the state of Michigan. </p> -->
-                                                    <p>Applications are due by <b>Monday, July 14th, 2023 at 11:59 pm EST</b>. However, the earlier your application is submitted, the earlier you will be considered for the program! 
+                                                    <p>Applications are due by <b>Friday, July 21st, 2023 at 11:59 pm EST</b>. However, the earlier your application is submitted, the earlier you will be considered for the program! 
                                                     All participants choosing to take part will be charged a program fee of around $200. <!--This is subject to change, and will be refunded 
-                                                    if the program is unable to occur due to future COVID-19 restrictions/guidelines.--> All accepted participants will be contacted via email by <b>July 16th</b>. There will be an acceptance form that must be completed by <b>July18th</b> to secure early move-in.
+                                                    if the program is unable to occur due to future COVID-19 restrictions/guidelines.--> All accepted participants will be contacted via email by <b>July 23rd</b>. There will be an acceptance form that must be completed by <b>July 25th</b> to secure early move-in.
                                                     If accepted, early move-in for participants will be <b>August 20th</b> with the program running to the <b>23rd</b>. More information about time/location will be provided on acceptance to the program. 
                                                     If you are interested in attending, please fill out the Google Form by clicking on the button below.</p>
                                                     <p>If you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
