Updated dates and year
Updated information on when the program starts and ends, when applications are due and overall year of the program.

--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                                 <p class="lead text-white">Applications for the 2023 program are not yet open.</p>
                                 <p class="lead text-white">The applications will open in the Spring.</p>
                                 -->
-                                <p class="lead text-white">Applications for the 2023 program are now open.</p>
+                                <p class="lead text-white">Applications for the 2024 program are now open.</p>
                                 <p class="lead text-white">Updated program information due to new regulations can be found by clicking the button below.</p>
 
 
@@ -157,10 +157,10 @@
                                                 <div class="modal-body">
                                                     <p class="pl-1">Hello future Spartan!</p>
                                                     <!-- <p>This year we are hoping to run the program in person while being socially distant and abiding by all health and safety protocols laid out by Michigan State University, Ingham County, and the state of Michigan. </p> -->
-                                                    <p>Applications are due by <b>Friday, July 14th, 2023 at 11:59 pm EST</b>. However, the earlier your application is submitted, the earlier you will be considered for the program! 
+                                                    <p>Applications are due by <b>Friday, July 14th, 2024 at 11:59 pm EST</b>. However, the earlier your application is submitted, the earlier you will be considered for the program! 
                                                     All participants choosing to take part will be charged a program fee of around $200. <!--This is subject to change, and will be refunded 
                                                     if the program is unable to occur due to future COVID-19 restrictions/guidelines.--> All accepted participants will be contacted via email by <b>July 16th</b>. There will be an acceptance form that must be completed by <b>July 18th</b> to secure early move-in.
-                                                    If accepted, early move-in for participants will be <b>August 20th</b> with the program running to the <b>23rd</b>. More information about time/location will be provided on acceptance to the program. 
+                                                    If accepted, early move-in for participants will be <b>August 19th</b> with the program running to the <b>22nd</b>. More information about time/location will be provided on acceptance to the program. 
                                                     If you are interested in attending, please fill out the Google Form by clicking on the button below.</p>
                                                     <p>If you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
                                                     <p>We hope to see you soon!</p>
@@ -168,7 +168,7 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
-                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/1xLuBSU91AdSTy4Q7" target="_blank">Sign Up Here</a>
+                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/skrHfvPhCW94a6tZA" target="_blank">Sign Up Here</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -235,7 +235,7 @@
                             <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
                                 <p class="description2">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. The program costs will be at max $200 but likely will be less, as it includes early move in costs, all meals, and a t-shirt at the end of the program. Payment information will be sent out to accepted participants.</p>
                                 <div class="btn-wrapper">
-                                    <a href="https://forms.gle/1xLuBSU91AdSTy4Q7" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
+                                    <a href="https://forms.gle/skrHfvPhCW94a6tZA" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                         <span class="btn-inner--text">Apply Now</span>
                                     </a>
@@ -309,7 +309,7 @@
             <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; 2023
+                        &copy; 2024
                         Leadership Advantage.
                     </div>
                 </div>
